freest/test/prog/Invalid/Typing/NonLinPat/NonLinPat.fst
module NonLinPat where

foo : Close -> ()
foo _ = ()